Patient monitoring and patient communication for nurse user - Closes #2

--- a/Group16-COMP367Project/Views/Home/Index.cshtml
+++ b/Group16-COMP367Project/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
         ("mark_johnson", "3")
     };
 
+    //patient table information
     var notifications = new List<string> {
         "Patient jane_smith has a new alert.",
         "Vitals update needed for john_doe.",
